# lexium_urdf

./: README.md
lexium_cobot_l03s/: CMakeLists.txt  package.xml
lexium_cobot_l03s/launch/: display.launch.py
lexium_cobot_l03s/rviz/: lexium_cobot_l03s.rviz
lexium_cobot_l03s/urdf/: lexium_cobot_l03s.urdf.xacro
